--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@emotion/react": "^11.10.5",
+      "@emotion/styled": "^11.10.5",
       "@monaco-editor/react": "^4.4.6",
+      "@mui/icons-material": "^5.10.15",
+      "@mui/material": "^5.10.15",
       "@reduxjs/toolkit": "^1.8.5",
       "@testing-library/jest-dom": "^5.16.5",
       "@testing-library/react": "^13.4.0",
@@ -11,7 +15,6 @@
       "formik": "^2.2.9",
       "monaco-themes": "^0.4.1",
       "react": "^18.2.0",
-      "react-accessible-accordion": "^5.0.0",
       "react-dom": "^18.2.0",
       "react-paginate": "^8.1.3",
       "react-router-dom": "^5.3.3",
